--- a/reservia.html
+++ b/reservia.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <div class="head">
                 <img src="./images/images/logo/Reservia.svg" alt="Reservia" />
-                <p href="#inscription" class="inscription" >S'inscrire</p>
+                <p  class="inscription" >S'inscrire</p>
             </div>
 
             <ul class="list-items">
@@ -28,7 +28,7 @@
     <main>
         <div class="search-container">
 
-            <h3 class="reve">Trouvez votre hébergement pour des vacances de rêve</h3>
+            <h1 class="reve">Trouvez votre hébergement pour des vacances de rêve</h1>
 
             <p class="ville">En plein centre ville ou en pleine nature</p>
 
@@ -109,15 +109,15 @@
         </div>
 
 
-        <section class="hebergement">
+        <section id="hebergement" class="hebergement">
             <section class="marseille">
                 <h1><strong>Hébergements à Marseille</strong></h1>
                 <div class="row">
                     <article class="article">
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                id="marcus" alt="auberge la cannebière" width="287" height="112">
+                                src=".\images/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                id="marcus" alt="auberge la cannebière" >
                         </div>
                         <h3>Auberge de la Cannebière</h3>
 
@@ -135,8 +135,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                id="fred" alt="hotel du port" width="440" height="170">
+                                src=".\images/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                id="fred" alt="hotel du port" >
                         </div>
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de <strong>46€</strong></p>
@@ -152,8 +152,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                id="reisetopia" alt="hotel les mouettes" width="287" height="112">
+                                src=".\images/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                id="reisetopia" alt="hotel les mouettes" >
                         </div>
                         <h3>Hôtel les mouettes</h3>
                         <p>Nuit à partir de <strong>76€</strong></p>
@@ -173,8 +173,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                id="annie" alt="hotel de la mer" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                id="annie" alt="hotel de la mer" >
                         </div>
                         <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de <strong>46€</strong></p>
@@ -191,8 +191,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                id="nicate" alt="auberge le panier" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                id="nicate" alt="auberge le panier" >
                         </div>
                         <h3>Auberge le panier</h3>
                         <p>Nuit à partir de <strong>23€</strong></p>
@@ -209,8 +209,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                id="febrian" alt="hotel chez amina" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                id="febrian" alt="hotel chez amina" >
                         </div>
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de <strong>96€</strong></p>
@@ -224,12 +224,12 @@
 
                     </article>
                 </div>
-                <h1><strong>Affichez plus</strong> </h1>
+                <h2><strong>Affichez plus</strong> </h2>
             </section>
 
             <section class="populaire">
                 <div class="pluspop">
-                    <h1><strong>Les plus populaires</strong></h1>
+                    <h2><strong>Les plus populaires</strong></h2>
                     <div class="graph">
                         <i class="fas fa-chart-line"></i>
                     </div>
@@ -239,8 +239,8 @@
 
                     <div class="article-image">
                         <img class="popular"
-                            src="./images\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            id="emile" alt="hotel le soleil du matin" width="287" height="112">
+                            src=".\images\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            id="emile" alt="hotel le soleil du matin" >
                     </div>
                     <div class="infopop">
                         <h3>Hôtel Le soleil du matin</h3>
@@ -258,8 +258,8 @@
                 <article class="articlepop">
                     <div class="article-image">
                         <img class="popular"
-                            src="./images\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" id="emile"
-                            alt="au cœur de l'eau chambre d'hotes" width="287" height="112">
+                            src=".\images\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" id="emile"
+                            alt="au cœur de l'eau chambre d'hotes" >
                     </div>
                     <div class="infopop">
                         <h3>Au cœur de l'eau chambre d'hôtes</h3>
@@ -276,8 +276,8 @@
                 <article class="articlepop">
                     <div class="article-image">
                         <img class="popular"
-                            src="./images\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                            id="zakaria" alt="hotel tout bleu et blanc" width="287" height="112">
+                            src=".\images\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                            id="zakaria" alt="hotel tout bleu et blanc" >
                     </div>
                     <div class="infopop">
                         <h3>Hôtel Tout bleu et Blanc</h3>
@@ -301,18 +301,18 @@
             <div class="blocactivites">
                 <div class="premierblock">
                     <article class="grandecarte">
-                        <img src="./images\images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                        <img src=".\images\images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                             alt="Photo du Vieux port">
                         <h3>Vieux Port</h3>
                     </article>
                     <article class="doublecarte">
                         <div class="doublecartepartie1">
-                            <img src="./images\images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                 alt="Photo du Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
                         </div>
                         <div class="doublecartepartie2">
-                            <img src="./images\images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                 alt="Photo des Îles du Frioul">
                             <h3>Îles du Frioul</h3>
                         </div>
@@ -321,18 +321,18 @@
 
                 <div class="deuxiemeblock">
                     <article class="grandecarte">
-                        <img src="./images\images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                        <img src=".\images\images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                             alt="Photo du Parc National des Calancques">
                         <h3>Parc National Des Calanques</h3>
                     </article>
                     <article class="doublecarte">
                         <div class="doublecarte2partie1">
-                            <img src="./images\images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                 alt="Photo de Notre Dame de la Garde">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
                         <div class="doublecarte2partie2">
-                            <img src="./images\images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                 alt="Photo du Parc Longchamp">
                             <h3>Parc Longchamp</h3>
                         </div>
