--- a/reservia.html
+++ b/reservia.html
@@ -19,16 +19,20 @@
             </div>
 
             <ul class="list-items">
-                <li href="#hebergement" class="item active">Hébergement</li>
-                <li href="#Activites" class="item">Activités</li>
-                <li href="#inscription" class="item register desktop">S'inscrire</li>
+                <li  class="item active">
+                    <a     style="color:#0065FC" href="#hebergement">hébergement</a>
+                </li>
+                <li  class="item">
+                    <a  style="color:#0065FC" href="#Activites">Activités</a>
+                </li>
+                <li  class="item register desktop">S'inscrire</li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="search-container">
 
-            <h1 class="reve">Trouvez votre hébergement pour des vacances de rêve</h1>
+            <h2 class="reve">Trouvez votre hébergement pour des vacances de rêve</h2>
 
             <p class="ville">En plein centre ville ou en pleine nature</p>
 
@@ -54,49 +58,49 @@
                 <h2 class="ftitre"><strong>Filtres</strong></h2>
                 <button class="button1">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-money-bill-wave"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Économique
-                    </div>
+                    </span>
 
                 </button>
 
                 <button class="button2">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-child"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Familial
-                    </div>
+                    </span>
 
                 </button>
 
                 <button class="button3">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Romantique
-                    </div>
+                    </span>
 
                 </button>
 
                 <button class="button4">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-dog"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Animaux autorisés
-                    </div>
+                    </span>
 
                 </button>
 
@@ -116,7 +120,7 @@
                     <article class="article">
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                src=".\images\images/hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                 id="marcus" alt="auberge la cannebière" >
                         </div>
                         <h3>Auberge de la Cannebière</h3>
@@ -135,7 +139,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                src=".\images\images/hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                 id="fred" alt="hotel du port" >
                         </div>
                         <h3>Hôtel du port</h3>
@@ -152,7 +156,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                src=".\images\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                 id="reisetopia" alt="hotel les mouettes" >
                         </div>
                         <h3>Hôtel les mouettes</h3>
