--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
         <nav class="navigation">
             <div class="head">
                 <img src="./images/images/logo/Reservia.svg" alt="Reservia" />
-                <p href="#inscription" class="inscription" >S'inscrire</p>
+                <p  class="inscription" >S'inscrire</p>
             </div>
 
             <ul class="list-items">
-                <li href="#hebergement" class="item active">Hébergement</li>
-                <li href="#Activites" class="item">Activités</li>
-                <li href="#inscription" class="item register desktop">S'inscrire</li>
+                <li  class="item active">
+                    <a     style="color:#0065FC" href="#hebergement">hébergement</a>
+                </li>
+                <li  class="item">
+                    <a  style="color:#0065FC" href="#Activites">Activités</a>
+                </li>
+                <li  class="item register desktop">S'inscrire</li>
             </ul>
         </nav>
     </header>
@@ -54,49 +58,49 @@
                 <h2 class="ftitre"><strong>Filtres</strong></h2>
                 <button class="button1">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-money-bill-wave"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Économique
-                    </div>
+                    </span>
 
                 </button>
 
                 <button class="button2">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-child"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Familial
-                    </div>
+                    </span>
 
                 </button>
 
                 <button class="button3">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-heart"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Romantique
-                    </div>
+                    </span>
 
                 </button>
 
                 <button class="button4">
 
-                    <div class="img">
+                    <span class="img">
                         <i class="fas fa-dog"></i>
-                    </div>
+                    </span>
 
-                    <div class="text">
+                    <span class="text">
                         Animaux autorisés
-                    </div>
+                    </span>
 
                 </button>
 
@@ -109,15 +113,15 @@
         </div>
 
 
-        <section class="hebergement">
+        <section id="hebergement" class="hebergement">
             <section class="marseille">
                 <h1><strong>Hébergements à Marseille</strong></h1>
                 <div class="row">
                     <article class="article">
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                                id="marcus" alt="auberge la cannebière" width="287" height="112">
+                                src=".\images\images/hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                id="marcus" alt="auberge la cannebière" >
                         </div>
                         <h3>Auberge de la Cannebière</h3>
 
@@ -135,8 +139,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-                                id="fred" alt="hotel du port" width="440" height="170">
+                                src=".\images\images/hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                id="fred" alt="hotel du port" >
                         </div>
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de <strong>46€</strong></p>
@@ -152,8 +156,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                                id="reisetopia" alt="hotel les mouettes" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                id="reisetopia" alt="hotel les mouettes" >
                         </div>
                         <h3>Hôtel les mouettes</h3>
                         <p>Nuit à partir de <strong>76€</strong></p>
@@ -173,8 +177,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                                id="annie" alt="hotel de la mer" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                id="annie" alt="hotel de la mer" >
                         </div>
                         <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de <strong>46€</strong></p>
@@ -191,8 +195,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-                                id="nicate" alt="auberge le panier" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                id="nicate" alt="auberge le panier" >
                         </div>
                         <h3>Auberge le panier</h3>
                         <p>Nuit à partir de <strong>23€</strong></p>
@@ -209,8 +213,8 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src="./images\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                                id="febrian" alt="hotel chez amina" width="287" height="112">
+                                src=".\images\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                id="febrian" alt="hotel chez amina" >
                         </div>
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de <strong>96€</strong></p>
@@ -224,12 +228,12 @@
 
                     </article>
                 </div>
-                <h1><strong>Affichez plus</strong> </h1>
+                <h2 class="affiche"><strong>Affichez plus</strong> </h2>
             </section>
 
             <section class="populaire">
                 <div class="pluspop">
-                    <h1><strong>Les plus populaires</strong></h1>
+                    <h2><strong>Les plus populaires</strong></h2>
                     <div class="graph">
                         <i class="fas fa-chart-line"></i>
                     </div>
@@ -239,8 +243,8 @@
 
                     <div class="article-image">
                         <img class="popular"
-                            src="./images\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            id="emile" alt="hotel le soleil du matin" width="287" height="112">
+                            src=".\images\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            id="emile" alt="hotel le soleil du matin" >
                     </div>
                     <div class="infopop">
                         <h3>Hôtel Le soleil du matin</h3>
@@ -258,8 +262,8 @@
                 <article class="articlepop">
                     <div class="article-image">
                         <img class="popular"
-                            src="./images\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" id="emile"
-                            alt="au cœur de l'eau chambre d'hotes" width="287" height="112">
+                            src=".\images\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" id="emile"
+                            alt="au cœur de l'eau chambre d'hotes" >
                     </div>
                     <div class="infopop">
                         <h3>Au cœur de l'eau chambre d'hôtes</h3>
@@ -276,8 +280,8 @@
                 <article class="articlepop">
                     <div class="article-image">
                         <img class="popular"
-                            src="./images\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                            id="zakaria" alt="hotel tout bleu et blanc" width="287" height="112">
+                            src=".\images\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                            id="zakaria" alt="hotel tout bleu et blanc" >
                     </div>
                     <div class="infopop">
                         <h3>Hôtel Tout bleu et Blanc</h3>
@@ -301,18 +305,18 @@
             <div class="blocactivites">
                 <div class="premierblock">
                     <article class="grandecarte">
-                        <img src="./images\images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                        <img src=".\images\images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                             alt="Photo du Vieux port">
                         <h3>Vieux Port</h3>
                     </article>
                     <article class="doublecarte">
                         <div class="doublecartepartie1">
-                            <img src="./images\images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                 alt="Photo du Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
                         </div>
                         <div class="doublecartepartie2">
-                            <img src="./images\images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                 alt="Photo des Îles du Frioul">
                             <h3>Îles du Frioul</h3>
                         </div>
@@ -321,18 +325,18 @@
 
                 <div class="deuxiemeblock">
                     <article class="grandecarte">
-                        <img src="./images\images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                        <img src=".\images\images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                             alt="Photo du Parc National des Calancques">
                         <h3>Parc National Des Calanques</h3>
                     </article>
                     <article class="doublecarte">
                         <div class="doublecarte2partie1">
-                            <img src="./images\images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                 alt="Photo de Notre Dame de la Garde">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
                         <div class="doublecarte2partie2">
-                            <img src="./images\images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                            <img src=".\images\images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                 alt="Photo du Parc Longchamp">
                             <h3>Parc Longchamp</h3>
                         </div>
