--- a/reservia.html
+++ b/reservia.html
@@ -120,7 +120,7 @@
                     <article class="article">
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images\images/hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                src="./images/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                 id="marcus" alt="auberge la cannebière" >
                         </div>
                         <h3>Auberge de la Cannebière</h3>
@@ -139,7 +139,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images\images/hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                src="./images/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                 id="fred" alt="hotel du port" >
                         </div>
                         <h3>Hôtel du port</h3>
@@ -156,7 +156,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                src="./images/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                 id="reisetopia" alt="hotel les mouettes" >
                         </div>
                         <h3>Hôtel les mouettes</h3>
@@ -177,7 +177,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                src="./images/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                 id="annie" alt="hotel de la mer" >
                         </div>
                         <h3>Hôtel de la mer</h3>
@@ -195,7 +195,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                src="./images/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                 id="nicate" alt="auberge le panier" >
                         </div>
                         <h3>Auberge le panier</h3>
@@ -213,7 +213,7 @@
 
                         <div class="article-image">
                             <img class="heberge"
-                                src=".\images\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                src="./images/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                 id="febrian" alt="hotel chez amina" >
                         </div>
                         <h3>Hôtel chez Amina</h3>
@@ -243,7 +243,7 @@
 
                     <div class="article-image">
                         <img class="popular"
-                            src=".\images\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            src="./images/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                             id="emile" alt="hotel le soleil du matin" >
                     </div>
                     <div class="infopop">
@@ -262,7 +262,7 @@
                 <article class="articlepop">
                     <div class="article-image">
                         <img class="popular"
-                            src=".\images\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" id="emile"
+                            src="./images/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" id="emile2"
                             alt="au cœur de l'eau chambre d'hotes" >
                     </div>
                     <div class="infopop">
@@ -280,7 +280,7 @@
                 <article class="articlepop">
                     <div class="article-image">
                         <img class="popular"
-                            src=".\images\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                            src="./images/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                             id="zakaria" alt="hotel tout bleu et blanc" >
                     </div>
                     <div class="infopop">
@@ -305,18 +305,18 @@
             <div class="blocactivites">
                 <div class="premierblock">
                     <article class="grandecarte">
-                        <img src=".\images\images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                        <img src="./images/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                             alt="Photo du Vieux port">
                         <h3>Vieux Port</h3>
                     </article>
                     <article class="doublecarte">
                         <div class="doublecartepartie1">
-                            <img src=".\images\images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            <img src="./images/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                 alt="Photo du Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
                         </div>
                         <div class="doublecartepartie2">
-                            <img src=".\images\images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                            <img src="./images/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                 alt="Photo des Îles du Frioul">
                             <h3>Îles du Frioul</h3>
                         </div>
@@ -325,18 +325,18 @@
 
                 <div class="deuxiemeblock">
                     <article class="grandecarte">
-                        <img src=".\images\images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                        <img src="./images/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                             alt="Photo du Parc National des Calancques">
                         <h3>Parc National Des Calanques</h3>
                     </article>
                     <article class="doublecarte">
                         <div class="doublecarte2partie1">
-                            <img src=".\images\images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            <img src="./images/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                 alt="Photo de Notre Dame de la Garde">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
                         <div class="doublecarte2partie2">
-                            <img src=".\images\images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                            <img src="./images/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                 alt="Photo du Parc Longchamp">
                             <h3>Parc Longchamp</h3>
                         </div>
