--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header>
+        <!--navigation-->
         <nav class="navigation">
             <div class="head">
                 <img src="./images/images/logo/Reservia.svg" alt="Reservia" />
@@ -20,16 +21,17 @@
 
             <ul class="list-items">
                 <li  class="item active">
-                    <a     style="color:#0065FC" href="#hebergement">hébergement</a>
+                    <a     style="color:#0065FC" href="#hebergement">Hébergement</a>
                 </li>
                 <li  class="item">
-                    <a  style="color:#0065FC" href="#Activites">Activités</a>
+                    <a  style="color:grey" href="#Activites">Activités</a>
                 </li>
                 <li  class="item register desktop">S'inscrire</li>
             </ul>
         </nav>
     </header>
     <main>
+        <!--barre de recherche-->
         <div class="search-container">
 
             <h3 class="reve">Trouvez votre hébergement pour des vacances de rêve</h3>
@@ -49,7 +51,7 @@
 
 
         </div>
-
+             <!--filtres-->
         <div class="filters">
 
 
@@ -112,11 +114,13 @@
 
         </div>
 
-
+          
         <section id="hebergement" class="hebergement">
-            <section class="marseille">
-                <h1><strong>Hébergements à Marseille</strong></h1>
-                <div class="row">
+             <!--hébergement-->
+            <section  class="marseille">
+                 <h1><strong>Hébergements à Marseille</strong></h1>
+                  <div class="row">
+                      <h2 class="test">test</h2>
                     <article class="article">
                         <div class="article-image">
                             <img class="heberge"
@@ -170,7 +174,7 @@
                         </div>
 
                     </article>
-                </div>
+                  </div>
 
                 <div class="row">
                     <article class="article">
@@ -230,7 +234,7 @@
                 </div>
                 <h2 class="affiche"><strong>Affichez plus</strong> </h2>
             </section>
-
+             <!--populaire-->
             <section class="populaire">
                 <div class="pluspop">
                     <h2><strong>Les plus populaires</strong></h2>
@@ -299,7 +303,7 @@
         </section>
 
 
-
+          <!--activités-->
         <section id="Activites" class="activites">
             <h2><strong>Activités à Marseille</strong></h2>
             <div class="blocactivites">
@@ -347,7 +351,7 @@
         </section>
     </main>
 
-
+    <!--footer-->
     <footer>
         <section>
             <h2>A propos</h2>
