--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
 
           
         <section id="hebergement" class="hebergement">
+            <h1  class="test">test</h1>
              <!--hébergement-->
             <section  class="marseille">
-            <h1><strong>Hébergements à Marseille</strong></h1>
+            <h2><strong>Hébergements à Marseille</strong></h2>
                   <div class="row">
                     <article class="article">
                         <div class="article-image">
