--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
         </div>
 
           
-        <section id="hebergement" class="hebergement">
-            <h1  class="test">test</h1>
+        <div id="hebergement" class="hebergement">
+            
              <!--hébergement-->
             <section  class="marseille">
-            <h2><strong>Hébergements à Marseille</strong></h2>
+            <h1><strong>Hébergements à Marseille</strong></h1>
                   <div class="row">
                     <article class="article">
                         <div class="article-image">
@@ -300,7 +300,7 @@
                     </div>
                 </article>
             </section>
-        </section>
+        </div>
 
 
           <!--activités-->
