--- a/reservia.html
+++ b/reservia.html
@@ -237,7 +237,7 @@
              <!--populaire-->
             <section class="populaire">
                 <div class="pluspop">
-                    <h2><strong>Les plus populaires</strong></h2>
+                    <h2 class="lesplus" ><strong>Les plus populaires</strong></h2>
                     <div class="graph">
                         <i class="fas fa-chart-line"></i>
                     </div>
